--- a/src/ResultsParser/EntityFx.BenchmarkDb.Web/Pages/Shared/_Layout.cshtml
+++ b/src/ResultsParser/EntityFx.BenchmarkDb.Web/Pages/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">EntityFx.BenchmarkDb.Web</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">EntityFX Benchmarks</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -19,10 +19,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Cpu List</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Benchmarks">Benchmarks</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/About">About</a>
                         </li>
                     </ul>
                 </div>
@@ -37,7 +40,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - EntityFX Benchmarks - @*<a asp-area="" asp-page="/Privacy">Privacy</a>*@
+            &copy; 2021 - EntityFX Benchmarks@*<a asp-area="" asp-page="/Privacy">Privacy</a>*@
         </div>
     </footer>
 
